--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
 
     <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="/assets/js/materialize.min.js"></script>
-  <script src="/assets/js/init.js"></script>
+  <script src="{{ "/assets/js/materialize.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/assets/js/init.js" | prepend: site.baseurl }}"></script>
 
   </body>
 
