pushing progress so far

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,23 +1,18 @@
-<footer class="page-footer teal">
+<footer class="page-footer grey darken-2">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h4 class="white-text">Design For America</h4>
+          <h5 class="white-text">Rice Studio</h5>
+          <p class="grey-text text-lighten-4">
+          Something something cool about rice and how creative we are and all of that shiz
+          </p>
 
 
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+
+        <div class="col l3 s12 offset-l2">
+          <h4 class="white-text">More Info</h4>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
             <li><a class="white-text" href="#!">Link 2</a></li>
@@ -26,10 +21,20 @@
           </ul>
         </div>
       </div>
+
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        <div class="row">
+
+          <div class="col l3 s6">
+            Website by <a class="white-text" href="http://maclockard.com">Mac Lockard</a>
+          </div>
+          <div class="col l3 s6">
+            Photos by <a class="white-text" href="#">Josh Lipshultz</a>
+          </div>
+
+        </div>
       </div>
     </div>
   </footer>
